# sr-api

./: .gitignore  LICENSE  README.md  pyproject.toml
srapi/: __init__.py  candidate.py  job.py  jobs.py  utils.py
src/sr_api/: api.py  exceptions.py
src/srapi/: __init__.py  api.py  candidate.py  jobs.py  utils.py
tests/: test_sr_api.py  test_srapi.py
