[tool.poetry]
name = "sr-api"
version = "0.1.0"
license = "MIT"
description = "The SmartRecruiters API client for Python."
readme = "README.md"
authors = ["Elliott Maguire <e.maguire@smartrecruiters.com"]

[tool.poetry.dependencies]
python = "^3.7"
ergal = "^0.1.5"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
