[tool.poetry]
name = "srapi"
version = "0.1.0"
license = "MIT"
description = "A Python client for the SmartRecruiters API."
readme = "README.md"
authors = ["Elliott Maguire <e.maguire@smartrecruiters.com"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.20"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
